--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": true,
     "sourceMap": true,
     "outDir": "dist",
-    "types": ["jest", "node"],
+    "types": [ "node"],
     "typeRoots": ["./types", "./node_modules/@types"],
     "strictPropertyInitialization": false,
   },
