--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "content-record-dac",
-  "version": "1.0.0",
+  "name": "@kbiswas/userprofile-record-library",
+  "version": "0.1.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build": "rm dist/main.js && npx webpack",
+    "build": "npx webpack",
     "lint:eslint": "eslint --ext .ts src",
     "lint:tsc": "tsc --noemit",
     "start": "webpack serve --open",
