--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "base64-js": "^1.3.1",
     "buffer": "^6.0.3",
     "post-me": "^0.4.5",
-    "skynet-js": "^4.0.13-beta"
+    "sjcl": "^1.0.8",
+    "skynet-js": "4.0.18-beta"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^14.14.37",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint-plugin-jsdoc": "^32.3.0",
@@ -29,7 +31,7 @@
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
     "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^3.11.2"
   }
 }
